z-index bug fix

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,7 +2,7 @@ nav{
     display: flex;
     position: fixed;
     width: 100%;
-    z-index: 10;
+    z-index: 20;
 }
 .navbar-custom {
     background-color: black;
